--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -23,11 +23,19 @@ h6 {
 
 .topnav {
     font-size: 14px;
+    background-color: #f5f5f5;
 }
 
 .lead {
     font-size: 18px;
     font-weight: 400;
+}
+
+.highlight{
+  color: #2BBBAD;
+}
+.large-font{
+  font-size: 23px;
 }
 
 .intro-header {
@@ -134,7 +142,7 @@ h6 {
 }
 
 .banner a{
-  color: grey;
+  color: #9e9e9e;
   text-decoration: none;
 }
 
