--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -102,7 +102,7 @@ h6 {
 }
 
 .content-section-b {
-    padding-top: 200px;
+    padding-top: 150px;
     padding-bottom: 200px
     padding-left:20px;
     padding-right: 20px;
@@ -115,70 +115,35 @@ h6 {
 }
 
 .section-heading {
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
+.page-heading{
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
 .section-heading-spacer {
     float: left;
     width: 200px;
     border-top: 3px solid #e7e7e7;
 }
 
-.banner {
-    padding: 30px 0;
-    color: #f8f8f8;
-}
-
-.banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 3em;
-}
-
-.banner ul {
-    margin-bottom: 0;
-}
-
-.banner-social-buttons {
-    float: right;
-    margin-top: 0;
-}
-
-.banner a{
-  color: #9e9e9e;
-  text-decoration: none;
-}
-
-@media(max-width:1199px) {
-    ul.banner-social-buttons {
-        float: left;
-        margin-top: 15px;
-    }
-}
-
-@media(max-width:767px) {
-    .banner h2 {
-        margin: 0;
-        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-        font-size: 3em;
-    }
-
-    ul.banner-social-buttons > li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
-    }
-
-    ul.banner-social-buttons > li:last-child {
-        margin-bottom: 0;
-    }
+.portfolio-item {
+    margin-bottom: 50px;
 }
 
 footer {
     padding: 50px 0;
-    background-color: #f8f8f8;
+    background-color: white;
+    text-align: center;
 }
-
+footer a{
+    color: #9e9e9e;
+}
+footer a:hover{
+  color: #EA6C68;
+}
 p.copyright {
     margin: 15px 0 0;
 }
